<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">
    <TextView
        android:id="@+id/idback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="&lt;  Back"
        android:clickable="true"
        android:textColor="#2c2c2c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"

        />
    <TextView
        android:id="@+id/idsign_in1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_"
        android:textStyle="bold"
        android:textColor="#4280EF"
        android:textSize="40sp"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/idback"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/idpls_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_log_in_into_your_account"
        app:layout_constraintTop_toBottomOf="@+id/idsign_in1"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:textSize="15dp"
        android:layout_marginBottom="10dp"
        />
    <TextView
        android:id="@+id/idemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/idpls_log_in"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/enter_your_email_id"
        android:id="@+id/idemail_box"
        app:layout_constraintTop_toBottomOf="@+id/idemail"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="15dp"
        android:inputType="textEmailAddress"
        android:layout_marginTop="10dp"
        android:background="@drawable/fill_box"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:id="@+id/idpassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idemail_box"
        android:textStyle="bold"

        android:layout_marginTop="15dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:id="@+id/idpassword_box"
        app:layout_constraintTop_toBottomOf="@+id/idpassword"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/fill_box"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="#F78720"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/idpassword_box"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/idforgotpassword"
        android:textStyle="bold"

        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:background="@drawable/sign_box"
        android:id="@+id/idsigninbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idforgotpassword"

        />
    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_google"
        android:textColor="#4280EF"
        android:id="@+id/idgooglesignin"
        android:layout_marginTop="70dp"
        android:background="@drawable/rounded_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idsigninbutton"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_facebook"
        android:background="@drawable/rounded_box"
        android:textColor="#4280EF"
        android:layout_marginTop="20dp"
        android:id="@+id/idfacebooksignin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idgooglesignin"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
