<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#4280EF"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingTop="80dp"/>

    <TextView
        android:id="@+id/LetsGetStarted"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lets_get_started"
        android:textSize="15sp"
        android:textColor="#2c2c2c"
        app:layout_constraintTop_toBottomOf="@id/Welcome"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/ExistingCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Existing customer / Get started"
        android:paddingTop="180dp"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textColor="#2c2c2c"
        app:layout_constraintTop_toBottomOf="@id/LetsGetStarted"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:textColor="@color/white"
        android:background="@drawable/sign_box"
        app:layout_constraintTop_toBottomOf="@id/ExistingCustomer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/NewCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_customer"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#2c2c2c"
        app:layout_constraintTop_toBottomOf="@id/btnSignin"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="18dp"/>

    <TextView
        android:id="@+id/CreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:textColor="#4280EF"
        android:clickable="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/NewCustomer"
        app:layout_constraintBaseline_toBaselineOf="@id/NewCustomer"
        android:layout_marginStart="8dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>
