<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card"
        android:gravity="center"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_4_digit_code"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="5dp" />


        <TextView
            android:id="@+id/textDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a_four_digit_code_should_have_come_to_your_email_address_that_you_indicated"
            android:textColor="#000000"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="55dp"
                android:layout_height="90dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:maxLength="1"
                android:inputType="numberPassword"
                android:background="@drawable/pin" />

            <EditText
                android:layout_width="55dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:maxLength="1"
                android:inputType="numberPassword"
                android:background="@drawable/pin" />

            <EditText
                android:layout_width="55dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:maxLength="1"
                android:inputType="numberPassword"
                android:background="@drawable/pin" />

            <EditText
                android:layout_width="55dp"
                android:layout_height="90dp"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:maxLength="1"
                android:inputType="numberPassword"
                android:background="@drawable/pin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/sign_box"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:layout_marginEnd="20dp" />

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_box"
                android:text="@string/cancel"
                android:textColor="#4280EF" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
